updated certifications and padded, also shifted links to top

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <style>
             .resume{
-                padding: 10%;
+                padding: 5% 10%;
                 font-family: Arial, Helvetica, sans-serif;
             }
             .heading{
@@ -62,11 +62,15 @@
             <br> (+44) 77766 96884
             <br>moulish.developer@gmail.com</p>
 
-            <p class="heading">Skills
-
-            </p>
+            <p class="heading">Links</p>
             <p>
-                <span class="heading3">Programming Languages:</span> Python , JavaScript , SQL 
+                Github: <a href="https://github.com/moulish-dev">(https://github.com/moulish-dev)</a><br>
+                Linkedin: <a href="https://www.linkedin.com/in/moulishwaran-balaji/">(https://www.linkedin.com/in/moulishwaran-balaji/)</a> 
+            </p>
+
+            <p class="heading">Skills</p>
+            <p>
+                <span class="heading3">Programming Languages:</span> Python , JavaScript , SQL , MATLAB
                 <br> <span class="heading3">Frameworks and Libraries:</span> Django , Bootstrap 
                 <br>  <span class="heading3">Databases:</span> MySQL 
                 <br> <span class="heading3">DevOps Tools:</span> Git 
@@ -93,21 +97,22 @@
                     <li>CRUD (Create,Read,Update,Delete) operations for transactions</li>
                     <li>User Authentication</li>
                     <li>Detailed Reports and Analysis</li>
-                    <li>Allow to add users to add transactions using pdf upload</li>
+                    <li>Allow users to add transactions using pdf upload</li>
                     Github Link: <a href="https://github.com/moulish-dev/Expense_Tracker">(https://github.com/moulish-dev/Expense_Tracker)</a>
                 </p>
             </p>
 
         
-            <p class="heading">Links</p>
-            <p>
-                Github: <a href="https://github.com/moulish-dev">(https://github.com/moulish-dev)</a><br>
-                Linkedin: <a href="https://www.linkedin.com/in/moulishwaran-balaji/">(https://www.linkedin.com/in/moulishwaran-balaji/)</a> 
-            </p>
+            
 
+            <p class="heading">Certifications</p>
+            <li>Machine Learning with Python: Foundations(<a href="https://www.linkedin.com/learning/certificates/856d66fdd752fd6ff7718ec53f8bd03ba9007875ce5fd3b90778baacc64850a7?trk=share_certificate">View Certificate</a> )</li>
+            <li>Intro to Machine Learning( <a href="https://www.kaggle.com/learn/certification/moulishwaranbalaji/intro-to-machine-learning">View Certificate</a> )</li>
+            <li>MATLAB Onramp (Foundation)(<a href="https://matlabacademy.mathworks.com/progress/share/certificate.html?id=4d303aff-4218-45c5-810d-f0165a885f38&">View Certificate</a> )</li>
+            <li>Top 10 Skills for Robotics Engineers( <a href="https://www.linkedin.com/learning/certificates/fa4601c1df128410e335767a941da4f0de4099e1183d9dbbedfdf5ecf4a83633?trk=share_certificate">View Certificate</a> )</li>
             <!-- Footer -->
             <footer>
-                <p>&copy; 2024 Moulishwaran Balaji All Rights reserved</p>
+                <p>&copy; 2024 Moulishwaran Balaji <br> All Rights reserved</p>
             </footer>
         <script src="" async defer></script>
     </body>
